--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=JHAs
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:S4C0FrEmer7H68rxW4oY9eUIX34cbaELEbfGPhgzhG4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,8 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
